fix: Arreglo modificación de usuario - feat: Actualizo swagger y carpeta dis
