# dist/tools/swagger-output.json
@@ -107,12 +107,14 @@
             "description": "Internal Server Error"
           }
         }
-      },
+      }
+    },
+    "/usuario/{id_usuario}": {
       "put": {
         "description": "",
         "parameters": [
           {
-            "name": "id",
+            "name": "id_usuario",
             "in": "path",
             "required": true,
             "type": "string"
@@ -185,12 +187,32 @@
       },
       "post": {
         "description": "",
+        "parameters": [
+          {
+            "name": "apply(this",
+            "in": "header",
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
           },
           "201": {
             "description": "Created"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/cursos-free": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
           },
           "500": {
             "description": "Internal Server Error"
